--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "html2canvas"
+            ],
             "outputPath": "dist/hope",
             "index": "src/index.html",
             "browser": "src/main.ts",
